--- a/ProjectRedhead.Application/Properties/launchSettings.json
+++ b/ProjectRedhead.Application/Properties/launchSettings.json
@@ -3,8 +3,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:52196",
-      "sslPort": 44304
+      "applicationUrl": "http://localhost:60277",
+      "sslPort": 44349
     }
   },
   "$schema": "http://json.schemastore.org/launchsettings.json",
@@ -17,7 +17,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "ProjectRedhead.Backend": {
+    "ProjectRedhead.Application": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "api/values",
@@ -32,11 +32,11 @@
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/api/values",
       "environmentVariables": {
         "ASPNETCORE_URLS": "https://+:443;http://+:80",
-        "ASPNETCORE_HTTPS_PORT": "44305"
+        "ASPNETCORE_HTTPS_PORT": "44350"
       },
-      "httpPort": 52197,
+      "httpPort": 60278,
       "useSSL": true,
-      "sslPort": 44305
+      "sslPort": 44350
     }
   }
 }
