--- a/ProjectRedhead.Application/Properties/launchSettings.json
+++ b/ProjectRedhead.Application/Properties/launchSettings.json
@@ -20,7 +20,7 @@
     "ProjectRedhead.Application": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "api/values",
+      "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
