--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,14 +6,15 @@
 trigger:
 - master
 
-pool:
-  vmImage: 'ubuntu-latest'
-
-steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
-
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
+jobs:
+- job: DockerApplicationBuild
+  displayName: Build API Docker Image
+  pool:
+    vmImage: 'ubuntu-latest'
+  steps:
+  - task: Docker@2
+    inputs:
+      command: 'build'
+      Dockerfile: 'ProjectRedhead.Application/Dockerfile'
+      buildContext: .
+      tags: 'projectredhead/api'
