Add Discord OAuth

--- a/ProjectRedhead.Application/appsettings.json
+++ b/ProjectRedhead.Application/appsettings.json
@@ -1,4 +1,20 @@
 {
+  "Authentication": {
+    "Discord": {
+      "Id": "",
+      "Secret": ""
+    }
+  },
+
+  "Database": {
+    "Name": "redhead"
+  },
+
+  "ConnectionStrings": {
+    "MongoDatabase": ""
+  },
+
+
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
