--- a/ProjectRedhead.Application/ProjectRedhead.Application.csproj
+++ b/ProjectRedhead.Application/ProjectRedhead.Application.csproj
@@ -14,6 +14,8 @@
 
   <ItemGroup>
     <PackageReference Include="Discord.OAuth2" Version="2.0.0" />
+    <PackageReference Include="MediatR" Version="7.0.0" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.7.9" />
