--- a/ProjectRedhead.Client.Application/Properties/launchSettings.json
+++ b/ProjectRedhead.Client.Application/Properties/launchSettings.json
@@ -3,8 +3,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:60295",
-      "sslPort": 44360
+      "applicationUrl": "http://localhost:50138",
+      "sslPort": 44301
     }
   },
   "profiles": {
@@ -15,7 +15,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "ProjectRedhead.Client.Host": {
+    "ProjectRedhead.Client.Application": {
       "commandName": "Project",
       "launchBrowser": true,
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
