Add signing key to options

--- a/ProjectRedhead.Application/appsettings.json
+++ b/ProjectRedhead.Application/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "Redhead": {
+    "Security": {
+      "SigningKey": "replacemepls!2019"
+    }
+  },
+
   "Authentication": {
     "Discord": {
       "Id": "",
