--- a/ProjectRedhead.Client.Application/appsettings.json
+++ b/ProjectRedhead.Client.Application/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "Redhead": {
+    "Client": {
+      "ApiEndpointUrl": "https://localhost:5001" 
+    }
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
