--- a/ProjectRedhead.Core.Domain/ProjectRedhead.Core.Domain.csproj
+++ b/ProjectRedhead.Core.Domain/ProjectRedhead.Core.Domain.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="5.1.1" />
+  </ItemGroup>
+
 </Project>
