--- a/ProjectRedhead.Client.Application/ClientApp/package.json
+++ b/ProjectRedhead.Client.Application/ClientApp/package.json
@@ -9,6 +9,7 @@
     "@types/react": "16.8.24",
     "@types/react-dom": "16.8.5",
     "@types/react-router-dom": "^4.3.4",
+    "flexboxgrid": "^6.3.1",
     "node-sass": "^4.12.0",
     "normalize.css": "^8.0.1",
     "react": "^16.8.6",
